# ModifiedSchwarz

./: .dummy.cpp  .gitignore  CMakeLists.txt  ModifiedSchwarz.cpp  ModifiedSchwarz.hpp  README.md  commondefs.hpp  exampleDomain3.hpp  firstMatrix.cpp
doc/: .gitignore  Doxyfile.in  manual.tex
example/: Read output.ipynb  drawex.py  ex1.cpp
src/: BoundaryPoints.cpp  BoundaryPoints.h  BoundaryValues.cpp  BoundaryValues.h  BoundaryValues.hpp  CauchyInterpolant.cpp  CauchyInterpolant.h  CauchyInterpolant.hpp  ClosureInterpolant.cpp  ClosureInterpolant.h  ComplexInterpolant.cpp  ComplexInterpolant.h  ComplexInterpolant.hpp  FunctionLike.hpp  ModifiedSchwarz.cpp  ModifiedSchwarz.hpp  Problem.cpp  Problem.h  Problem.hpp  RealInterpolant.cpp  RealInterpolant.h  RealInterpolant.hpp  SchwarzProblem.hpp  SchwarzSolution.hpp  SchwarzSolver.hpp  SchwarzTypes.h  SchwarzTypes.hpp  Solution.cpp  Solution.h  Solution.hpp  Solver.cpp  Solver.h  Solver.hpp  SolverData.h  SolverData.hpp  SpectralConstants.cpp  SpectralConstants.h  SpectralConstants.hpp  SpectralData.cpp  SpectralData.h  (+15 more)
test/: ComplexPoly.ipynb  PhasePlots.ipynb  Polynomial.cpp  Problem.cpp  ReadArma.ipynb  ShowArmaMat.ipynb  SolutionFFT.ipynb  SpectralData.cpp  SpectralSolution.cpp  TestFunctions.hpp  TestShared.cpp  TestShared.hpp  UnitDomain.cpp  UnitTest.h  checkBoundaryValues.cpp  checkCauchyInterpolant.cpp  checkClosureInterpolant.cpp  checkFFT.cpp  checkFMM.cpp  checkInterpolant.cpp  checkPolynomial.cpp  checkProblem.cpp  checkSolution.cpp  checkSpectralConstants.cpp  checkSpectralData.cpp  checkSpectralMethod.cpp  checkSpectralSolution.cpp  checkUnitDomain.cpp  comparing.cpp  firstMatrix.cpp  matWrite.cpp  matplot.py  sharedData.cpp  testRunner.cpp
test/python/: ComplexPoly.ipynb  InterpFFT.ipynb  RHStest.ipynb  ScalarToRGB.ipynb  SolutionFFT.ipynb
